@@ -710,7 +710,6 @@ str ALGgroupby(bat *res, const bat *gids, const bat *cnts);
 str ALGjoin2(bat *l, bat *r, const bat *lid, const bat *rid);
 str ALGjoinPath(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str ALGleftfetchjoin(bat *result, const bat *lid, const bat *rid);
-str ALGlike(bat *ret, const bat *bid, const str *k);
 str ALGmaxany(ptr result, const bat *bid);
 str ALGminany(ptr result, const bat *bid);
 str ALGprojecttail(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
