@@ -92,11 +92,6 @@ command selectNotNil(b:bat[:oid,:any_2]):bat[:oid,:any_2]
 address ALGselectNotNil
 comment "Select all not-nil values";
 
-# Pattern matching
-command like(b:bat[:oid,:str], substr:str) :bat[:oid,:oid]
-address ALGlike
-comment "Selects all elements that have 'substr' as in the tail.";
-
 command subsort(b:bat[:oid,:any_1], reverse:bit, stable:bit) :bat[:oid,:any_1]
 address ALGsubsort11
 comment "Returns a copy of the BAT sorted on tail values.
