@@ -1,6 +1,10 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Wed Oct  7 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed algerbra.like with a BAT argument.  Use algebra.likesubselect
+  instead.
+
 * Wed Sep 16 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed algebra.leftjoin.  Use algebra.subleftjoin or
   algebra.leftfetchjoin instead.
